# ConveyorOS-Configurator

./: conveyor.csv  index.html  package-lock.json  package.json  sample_pos.csv  test_commands.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/pages/: DataSource.tsx  DatabaseSettings.tsx  EquipmentSettings.tsx  FieldMappings.tsx  PosSelection.tsx  PosSettings.tsx  PrinterSettings.tsx
src/types/: config.ts
