[package]
name = "conveyoros-configurator"
version = "0.1.0"
description = "ConveyorOS POS Configuration Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "conveyoros_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
escpos-rs = "0.4"
rusb = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winspool", "minwindef"] }
